force-app/main/default/objects/Zoom_Phone_Calls_Info__c/Zoom_Phone_Calls_Info__c.object-meta.xml
<CustomObject>
    <label>Zoom Phone Calls Info</label>
    <nameField>
        <label>Zoom Phone Calls Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Phone Calls Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>