force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Date_Time__c</fullName>
    <description>Start time of the call</description>
    <inlineHelpText>Start time of the call</inlineHelpText>
    <label>Call Date Time</label>
    <type>DateTime</type>
</CustomField>