force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>Call_Direction__c</fullName>
    <description>Zoom call direction.</description>
    <inlineHelpText>Zoom call direction.</inlineHelpText>
    <label>Call Direction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>