force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <description>Call duration in mm:ss format from seconds</description>
    <formula>IF(ISBLANK(Inbound_Call_Duration__c),null,
 

IF(FLOOR(Inbound_Call_Duration__c/60)&lt;10, &quot;00:0&quot;&amp; TEXT(FLOOR(Inbound_Call_Duration__c/60)), &quot;00:&quot; &amp; TEXT(FLOOR(Inbound_Call_Duration__c/60)))
&amp;&quot;:&quot; &amp;
IF( MOD(Inbound_Call_Duration__c,60)&lt;10, &quot;0&quot;&amp; TEXT(MOD(Inbound_Call_Duration__c,60)), TEXT(MOD(Inbound_Call_Duration__c,60))) &amp;&quot;&quot;

)</formula>
    <label>Call Duration (Inbound)</label>
    <type>Text</type>
</CustomField>