force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Duration_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_Outbound__c</fullName>
    <formula>IF(ISBLANK( Outbound_Call_Duration__c ),null,
 

IF((MOD((Outbound_Call_Duration__c )/60,1)*60) &gt; 10,
 

TEXT(FLOOR( (Outbound_Call_Duration__c )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD((Outbound_Call_Duration__c )/60,1)*60) )+&quot;min&quot;,
 

TEXT(FLOOR( (Outbound_Call_Duration__c )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD((Outbound_Call_Duration__c )/60,1)*60) )+&quot;min&quot;
 

))</formula>
    <label>Call Duration (Outbound)</label>
    <type>Text</type>
</CustomField>