force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <description>Unique identifier of the phone call.</description>
    <inlineHelpText>Unique identifier of the phone call.</inlineHelpText>
    <label>Call Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>