force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <description>Result of the call</description>
    <inlineHelpText>Result of the call</inlineHelpText>
    <label>Call Result</label>
    <length>25</length>
    <type>Text</type>
</CustomField>