force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <description>The call indicates from (or to) which call center it was made.</description>
    <inlineHelpText>The call indicates from (or to) which call center it was made.</inlineHelpText>
    <label>Call Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>