force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Callee_Location__c.field-meta.xml
<CustomField>
    <fullName>Callee_Location__c</fullName>
    <label>Callee Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>