force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Callee_Name__c.field-meta.xml
<CustomField>
    <fullName>Callee_Name__c</fullName>
    <description>Contact name of the callee</description>
    <inlineHelpText>Contact name of the callee</inlineHelpText>
    <label>Callee Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>