force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/caller_name__c.field-meta.xml
<CustomField>
    <fullName>caller_name__c</fullName>
    <label>Caller Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>