force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/caller_number__c.field-meta.xml
<CustomField>
    <fullName>caller_number__c</fullName>
    <label>Caller Number</label>
    <type>Phone</type>
</CustomField>