force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Caller_Number_Source__c.field-meta.xml
<CustomField>
    <fullName>Caller_Number_Source__c</fullName>
    <description>Indicates where the phone number comes from:

internal — ZP native.
external — BYOC or Provider Exchange.
byop — Premise peering.</description>
    <inlineHelpText>Indicates where the phone number comes from:

internal — ZP native.
external — BYOC or Provider Exchange.
byop — Premise peering.</inlineHelpText>
    <label>Caller Number Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>