force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Chanel_Type__c.field-meta.xml
<CustomField>
    <fullName>Chanel_Type__c</fullName>
    <description>The recording&apos;s channel type (voice, video).</description>
    <inlineHelpText>The recording&apos;s channel type (voice, video).</inlineHelpText>
    <label>Chanel Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>