force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Zoom phone call duration.</description>
    <inlineHelpText>Zoom phone call duration.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>