force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Id__c</fullName>
    <description>Contact center engagement_id</description>
    <label>Engagement Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>