force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Extension_Type__c.field-meta.xml
<CustomField>
    <fullName>Extension_Type__c</fullName>
    <label>Extension Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>