force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/has_recording__c.field-meta.xml
<CustomField>
    <fullName>has_recording__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone call has recording</description>
    <inlineHelpText>Phone call has recording</inlineHelpText>
    <label>Has Recording</label>
    <type>Checkbox</type>
</CustomField>