force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Hold_Time_hh_mm_ss__c.field-meta.xml
<CustomField>
    <fullName>Hold_Time_hh_mm_ss__c</fullName>
    <formula>IF(ISBLANK(Hold_Time__c),null,

IF(FLOOR( Hold_Time__c /60)&lt;10, &quot;00:0&quot;&amp; TEXT(FLOOR(Hold_Time__c /60)), TEXT(FLOOR(Hold_Time__c /60)))
&amp;&quot;:&quot; &amp;

IF( MOD(Hold_Time__c ,60)&lt;10, &quot;&quot;&amp; TEXT(MOD(Hold_Time__c,60)), TEXT(MOD(Hold_Time__c,60))

))</formula>
    <label>Hold Time (hh:mm:ss)</label>
    <type>Text</type>
</CustomField>