force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Inbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Call__c</fullName>
    <label>Inbound Call</label>
    <length>25</length>
    <type>Text</type>
</CustomField>