force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Call__c</fullName>
    <label>Outbound Call</label>
    <length>25</length>
    <type>Text</type>
</CustomField>