force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Outbound_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Call_Duration__c</fullName>
    <label>Outbound Call Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>