force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/recording_Id__c.field-meta.xml
<CustomField>
    <fullName>recording_Id__c</fullName>
    <description>user recording id</description>
    <inlineHelpText>user recording id</inlineHelpText>
    <label>recording Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>