force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/User_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>User_Call_Center__c</fullName>
    <description>The call indicates which call center is associated with the user.</description>
    <formula>Zoom_Users_Info__r.Call_Center_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The call indicates which call center is associated with the user.</inlineHelpText>
    <label>User Call Center</label>
    <type>Text</type>
</CustomField>