force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time__c</fullName>
    <label>Waiting Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>