force-app/main/default/objects/Zoom_Phone_Calls_Info__c/fields/Waiting_time_hh_mm_ss__c.field-meta.xml
<CustomField>
    <fullName>Waiting_time_hh_mm_ss__c</fullName>
    <formula>IF(ISBLANK(Waiting_Time__c),null,

IF(FLOOR(Waiting_Time__c/60)&lt;10, &quot;0&quot;&amp; TEXT(FLOOR(Waiting_Time__c/60)), TEXT(FLOOR(Waiting_Time__c/60)))
&amp; &quot;:00:&quot; &amp;

IF( MOD(Waiting_Time__c,60)&lt;10, &quot;0&quot;&amp; TEXT(MOD(Waiting_Time__c,60)), TEXT(MOD(Waiting_Time__c,60))

))</formula>
    <label>Waiting time (hh:mm:ss)</label>
    <type>Text</type>
</CustomField>