force-app/main/default/objects/Zoom_Phone_Calls_Info__c/recordTypes/Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Call_Center</fullName>
    <active>true</active>
    <description>Record type for Zoom Call Center Users</description>
    <label>Contact Center</label>
</RecordType>