force-app/main/default/objects/Zoom_Phone_Calls_Info__c/recordTypes/Phone_Users.recordType-meta.xml
<RecordType>
    <fullName>Phone_Users</fullName>
    <active>true</active>
    <description>Record type for Zoom Phone Users</description>
    <label>Phone Users</label>
</RecordType>