force-app/main/default/objects/Zoom_Phone_Calls_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Date_Time__c</columns>
    <columns>Inbound_Call__c</columns>
    <columns>Call_Duration__c</columns>
    <columns>Waiting_time_hh_mm_ss__c</columns>
    <columns>Hold_Time_hh_mm_ss__c</columns>
    <columns>Outbound_Call__c</columns>
    <columns>Call_Duration_Outbound__c</columns>
    <columns>Call_Result__c</columns>
    <columns>has_recording__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>