force-app/main/default/objects/Zoom_Phone_Calls_Info__c/listViews/Contact_Center_Calls_List.listView-meta.xml
<ListView>
    <fullName>Contact_Center_Calls_List</fullName>
    <columns>NAME</columns>
    <columns>Call_Date_Time__c</columns>
    <columns>Call_Direction__c</columns>
    <columns>Call_Duration__c</columns>
    <columns>Call_Result__c</columns>
    <columns>has_recording__c</columns>
    <columns>Call_Type__c</columns>
    <columns>User_Call_Center__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Call_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Call_Type__c</field>
        <operation>equals</operation>
        <value>Contact Center</value>
    </filters>
    <label>Contact Center Calls List</label>
</ListView>